--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Host your dream website using github.. Its Free!</h1>
+   
+</body>
+</html>
